2001-11-05  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/xml/docs.xml,faq.xml spell checked. Will update webpages when I add
	add all the new options in the gameplay options (later this week).

2001-11-04  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/GameplayOptions_gump.cc (GameplayOptions_gump): Added
	'Speed' option.

	* Lots:  Code cleanup:  get_abs_tile_coord() => get_tile(),
	get_abs_tile(),get_worldx(),get_worldy() went away.

2001-11-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* vgafile.cc: 'fixed' Spark's palette-cycling pants
	* Paperdoll_gump.cc: improved two-rings+staff display glitch

2001-11-03  Max Horn  <max@quendi.de>
	* Makefile.am: adapted to work with latest SDL CVS on OS X

2001-11-03  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Actor): Restored old walking frames, as they look
	more like the original.   (Both pieces of code are still there, so
	maybe this should be an exult.cfg option.)
	* schedule.cc (Sit_schedule): Check for free spot before sitting.

2001-11-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gump_utils.cc, Modal_gump.h, Newfile_gump.*: added mousewheel support
	to new file gump (mousewheel = scroll lines, alt-mousewheel = pages)
	* Slider_gump.*: mousewheel for Slider_gump (alt-wheel = 10 steps)
	* exult.cc: mousewheel for map scrolling (alt-wheel = left/right)

2001-11-02  Christian Ohm  <chr.ohm@gmx.net>

	* exult.cc, gamewin.cc/h, gumps/GameplayOptions_gump.cc/h
	gumps/Gump_manager.cc/h, gumps/gump_utils.cc, data/flx.in,
	data/gameplayoptions.shp: added larger gameoptions menu shape
	* made paperdolls in bg default to on
	* removed weird event loops
	* rearranged layout of gameoptions window
	* added 'doubleclick closes gumps'-option
	* added 'walk after teleport'-option for si
	  
2001-11-02  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (public): Check for chair being moved.

	* npctime.cc (Npc_timer_list): Paralyze timer.
