@@ -66,12 +66,12 @@ protected:
 	void approach_foe();		// Approach foe.
 	void start_strike();
 	void run_away();
-	void set_weapon_info();		// Set 'max_reach' of weapon.
 public:
 	Combat_schedule(Actor *n, Schedule_types prev_sched);
 	virtual void now_what();	// Npc calls this when it's done
 	virtual void im_dormant();	// Npc calls this when it goes dormant.
 	virtual void ending(int newtype);// Switching to another schedule.
+	virtual void set_weapon();	// Set weapon info.
 	};
 
 /*
