@@ -1,8 +1,16 @@
+2001-11-05  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* actors.cc,schedule.cc:  Tell schedule when weapons changed.
+
 2001-11-05  Dominik Reichardt <gigdr@tesionmail.de>
 	* docs/xml/docs.xml,faq.xml spell checked. Will update webpages when I add
 	add all the new options in the gameplay options (later this week).
 
 2001-11-04  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* schedule.cc (Sit_schedule): Another check for sitting.
+	* usecode/ucinternal.cc (public): Use ::find_nearby() sort-order
+	for Get_barge().
 
 	* gumps/GameplayOptions_gump.cc (GameplayOptions_gump): Added
 	'Speed' option.
